--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,22 +1,8 @@
 spring:
   application:
     name: libraryManagementSystem
-  datasource:
-    url: jdbc:h2:mem:librarydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+  profiles:
+    active: dev
 
 server:
   port: 8080
