--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: CI - Build Java & Docker Image
 
 on:
   push:
@@ -29,3 +29,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean package -DskipTests
+    - name: Build Docker image
+      run: docker build -t book:ci .
+
