--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,14 +37,15 @@ jobs:
     - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-
     - name: Build Docker image (SHA + latest)
       run: |
+        IMAGE_NAME=ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
         SHORT_SHA=${GITHUB_SHA::7}
+
         docker build \
-          -t ghcr.io/${{ github.repository }}:${SHORT_SHA} \
-          -t ghcr.io/${{ github.repository }}:latest \
-          .
+        -t $IMAGE_NAME:$SHORT_SHA \
+        -t $IMAGE_NAME:latest \
+        .
   
     - name: Push Docker image to GHCR
       run: |
