--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,20 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:7
+    container_name: book-redis
+    restart: always
+    ports:
+      - "6379:6379"
+
   app:
     image: ghcr.io/avishkar74/book:43a4fb4
     container_name: book-app
     restart: always
     depends_on:
       - postgres
+      - redis
     ports:
       - "8080:8080"
     environment:
