--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,5 +4,14 @@ spring:
   profiles:
     active: dev
 
+
+  data:
+    redis:
+      host: redis
+      port: 6379
+
+  cache:
+    type: redis
+
 server:
   port: 8080
